create initial input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>To Do List</title>
 </head>
 <body>
-    
+    <input placeholder="What needs to be done?" />
 </body>
 <script src="app.js"></script>
 </html>
