add ids to input and ul

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>To Do List</title>
 </head>
 <body>
-    <input placeholder="What needs to be done?" />
-    <ul></ul>
+    <input id="input" placeholder="What needs to be done?" />
+    <ul id="list"></ul>
 </body>
 <script src="app.js"></script>
 </html>
